--- a/hello.html
+++ b/hello.html
@@ -16,9 +16,16 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<!-- Description -->
         <div>
+            <h1>Ma description</h1>
             <p>je m'appele amine !</p>
+        </div>
+
+        <!-- recompense -->
+        <div>
+            <h1>Ma récompenses</h1>
+            <p>in khonstructioné !</p>
         </div>
 	
 </body></html>
